修改菜单高亮显示错误

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,6 @@ Temporary Items
 .apdisk
 *.properties
 .settings/org.eclipse.wst.common.project.facet.core.xml
+.classpath
+*.prefs
+.settings/org.eclipse.wst.common.project.facet.core.xml
